share/css-source/03-silki.css
/* See http://colorschemedesigner.com/#3p61TsOsOK-K- for the scheme, though we
   mostly just use the blues */

html {
    background-color: white;
}

body {
    font-family: sans-serif;
}

/* There are two rules in YUI Base that fuck up nesting ol inside ul and vice
versa. These two more specific rules fix that problem. */
ol > li {
	list-style: decimal outside;
}

ul > li {
	list-style: disc outside;
}

/* No margin on sub-lists */
ul * ul, ul * ol, ol * ol, ol * ul {
    margin-top: 0;
    margin-bottom: 0;
}

#doc3 {
    background-color: white;
}

#hd, #bd, #ft {
    /* yui base defaults to relatively small fonts, putting this in
       the body or #doc4 selector destroys the yui layout */
    font-size: 120%;
}

#hd {
    background-color: #a3d3e3;
    border-radius-topleft: 10px;
    border-radius-topright: 10px;
    -moz-border-radius-topleft: 10px;
    -moz-border-radius-topright: 10px;
    -webkit-border-radius-topleft: 10px;
    -webkit-border-radius-topright: 10px;
    padding-top:1em;
}

#ft {
    background-color: white;
    color: black;
    font-size: 90%;
    padding: 1em 1em;
}

#global-nav {
    display: inline;
    float: right;
    font-size: 80%;
}

#global-nav li {
    display: inline;
    list-style: none;
}

#global-nav li a {
    color: #111;
    padding-left: 0.5em;
}

#tabs {
    line-height: 1.2;
}

#tabs ul {
    border-bottom: 8px solid #13708f;
    margin: 0 0 0 0;
    padding: 0 0 0 0.5em;
}

#tabs li {
    background-color: white;
    display: inline;
    font-variant: small-caps;
    list-style: none;
    margin-right: 0.3em;
    padding: 0;
}

#tabs li a {
    background-color: white;
    border-radius-topleft: 6px;
    border-radius-topright: 6px;
    -moz-border-radius-topleft: 6px;
    -moz-border-radius-topright: 6px;
    -webkit-border-radius-topleft: 6px;
    -webkit-border-radius-topright: 6px;
    color: #333;
    font-weight: bold;
    padding: 0.3em 1em 0 1em;
    text-decoration: none;
}

#tabs li.selected a {
    background-color: #13708f;
    color: white;
    font-size: 110%;
    padding: 0.5em 1.2em 0 1.2em;
}

/* This makes sure that the header is the same height with our without
   tabs */
#tabs li.invisible {
    background-color: transparent;
    padding: 0.3em 1em 0 1em;
}

#tabs li a:hover {
    background-color: #21379d;
    color: white;
}

#tabs li.selected a:hover {
    background-color: #13708f;
    color: white;
}

#local-nav {
    background-color: #eee;
    padding: 0.4em 0 0.4em 0.7em;
}

#local-nav ul {
    display: inline;
    font-size: 90%;
    margin: 0;
    padding: 0;
}

#local-nav ul li {
    display: inline;
    list-style: none;
    margin-right: 1em;
    padding: 0;
}

#local-nav ul li a, #local-nav ul li a:visited {
    color: black;
}

#local-nav .current {
    font-weight: bold;
}

#messages {
    background-color: #FFFFD9;
    font-size: 90%;
}

#content {
    background-color: white;
    padding: 0.5em;
}

#sidebar {
    padding-left: 0.5em;
    padding-top: 0.5em;
}

#sidebar h2 {
    color: #02501c;
    margin: 0.5em 0 0.1em 0;
}

#sidebar h2 + ul {
    margin-top: 0.5em;
}

#sidebar h2 + form {
    margin-top: 0.5em;
}

h1 {
    margin: 0.3em 0 0.5em 0;
    font-size: 170%;
}

/* === Page View === */

#tags {
    border: 1px solid #21379d;
    border-radius-topleft: 6px;
    border-radius-topright: 6px;
    border-radius-bottomleft: 6px;
    border-radius-bottomright: 6px;
    -moz-border-radius-topleft: 6px;
    -moz-border-radius-topright: 6px;
    -moz-border-radius-bottomleft: 6px;
    -moz-border-radius-bottomright: 6px;
    -webkit-border-radius-topleft: 6px;
    -webkit-border-radius-topright: 6px;
    -webkit-border-radius-bottomleft: 6px;
    -webkit-border-radius-bottomright: 6px;
    float: right;
    margin-left: 1em;
    width: 16em;
}

#tags h2 {
    background-color: #21379d;
    color: white;
    margin-top: 0;
    padding: 0.2em 0.4em;
}

#tags ul, #tags form {
    margin-right: 1em;
    margin-left: 1em;
}

#tags form {
    margin-bottom: 1em;
}

#tags-list {
    margin: 0 0 1em 0;
    padding: 0;
}

#tags-list li { 
    display: inline;
    margin-right: 0.5em;
}

#tags-list li img {
    margin-right: 2px;
}

#tags-list li a { 
    text-decoration: none;
}

#tags-list li a.view-tag { 
    background: transparent url('/images/icons/tag_blue.png') no-repeat left bottom;
    padding-left: 18px;
}

#tags-form {
    font-size: 80%;
}

#tags-form p {
    margin: 0 0 0.1em 0;
}

#compare-to-previous {
    font-size: 90%;
    padding: 0.1em 0em;
}

#attribution {
    border-top: 2px solid #11a844;
    font-size: 90%;
    font-style: italic;
    padding: 0.1em 0;
}

/* === Dashboard === */

#dashboard {
    /* This is needed to avoid a too-large gap from the <h1> at
       the top of the page to the first dashboard item. */
    margin-top: -1em;
}

.dashboard-item {
    border: 1px solid #21379d;
    border-radius-topleft: 6px;
    border-radius-topright: 6px;
    border-radius-bottomleft: 6px;
    border-radius-bottomright: 6px;
    -moz-border-radius-topleft: 6px;
    -moz-border-radius-topright: 6px;
    -moz-border-radius-bottomleft: 6px;
    -moz-border-radius-bottomright: 6px;
    -webkit-border-radius-topleft: 6px;
    -webkit-border-radius-topright: 6px;
    -webkit-border-radius-bottomleft: 6px;
    -webkit-border-radius-bottomright: 6px;
    margin-top: 1em;
}

.dashboard-item h2 {
    background-color: #21379d;
    color: white;
    margin-top: 0;
    padding: 0.2em 0.4em;
}

/* === Tables === */

table.standard-table {
    border-bottom: 1px solid #21379d;
    border-right: 1px solid #21379d;
    width: 100%;
}

table.standard-table th,
table.standard-table td {
    border: none;
    vertical-align: top;
}

table.standard-table th {
    text-align: left;
}

table.standard-table td {
    padding: 0.3em 0.5em;
}

table.standard-table thead tr {
    background-color: #21379d;
    border-left: 5px solid #21379d;
    color: white;
}

table.standard-table tbody tr {
    border-bottom: 1px solid #21379d;
}

table.standard-table tr.odd {
    border-left: 5px solid #999;
}

table.standard-table tr.even {
    border-left: 5px solid #21379d;
}

table.standard-table tr.has-child-row {
    border-bottom: 0;
}

table.standard-table tbody:hover tr {
    background-color: #EEE;
}

table.revision-diff {
    border: 1px solid black;
    width: 100%;
}

table.revision-diff > thead > tr > th.rev1,
table.revision-diff > thead > tr > th.rev2 {
    width: 49%;
}

table.revision-diff > tbody > tr {
    border: 0;
}

table.revision-diff > tbody > tr.attribution {
    font-size: 90%;
    font-style: italic;
}    

table.revision-diff > tbody > tr > td {
    border: 1px dashed #ccc;
    vertical-align: top;
}

table.revision-diff > tbody > tr.diff-changed del {
    color: #900;
    font-style: normal;
}

table.revision-diff > tbody > tr.diff-changed ins {
    color: #090;
    font-style: normal;
}

table.revision-diff > tbody > tr > td.diff-removed {
    background-color: #fdd;
}

table.revision-diff > tbody > tr > td.diff-added {
    background-color: #dfd;
}

table.revision-diff > tbody > tr > td.marker {
    font-weight: bold;
    text-align: center;
}

#attachments img {
    margin-top: 0.3em;
}

/* === Forms === */

fieldset {
    background-color: #f9d5b0;
    border-top: 1px solid #e68117;
    padding: 0.5em;
    padding-bottom: 1em;
}

fieldset.last {
    padding-bottom: 0;
}

fieldset legend {
    background-color: #8f683f;
    color: white;
    font-weight: bold;
    padding: 0.4em;
}

form div.form-error {
    border: 1px solid black;
    margin: 0.3em 0 0.3em 0;
    padding: 0.3em;
}

form div.form-error p {
    margin: 0.1em 0;
}

form div.form-error, form div.error {
    background-color: #FCC841;
}

form div.error {
    margin-top: 2px;
}

form div.error p.error-message {
    margin-bottom: 0.1em;
    margin-left: 12.5em;
}

form div.error p span {
    font-size: 85%;
}

form div.form-item { 
    clear: both;
    padding: 0.4em 0 0.4em 0;
}

/* Having the help-text div allows us to set the margin in ems, to
   match the width of the label tag. Without the div, we'd have to set
   the margin on the p tag, but this has a different font-size than
   the label, so the em size is not the same. */
form div.form-item div.help-text { 
    clear: both;
    margin-top: 0.1em;
    margin-left: 12.5em;
}

.help-text p {
    font-size: 85%;
    margin-bottom: 0em;
}

form label {
    font-weight: bold;
}

form .for-field {
    display: block;
    float: left;
    margin-right: 0.5em;
    text-align: right;
    width: 12em;
}

form label.secondary {
    display: block;
    float: left;
    font-weight: normal;
    margin-right: 0.5em;
    text-align: right;
    width: 12em;
}

form div.no-label {
    margin-left: 12.5em;
}

form input.no-label {
    display: block;
    margin-bottom: 0.2em;
}

form label.for-radio {
    color: #777;
    margin-right: 0.5em;
}

form label.for-checkbox {
    font-weight: normal;
}

form label.selected {
    color: black;
}

form div.form-item span.required {
    font-weight: bold;
}

form input.checkbox {
    margin-top: 0.2em;
}

form a.add-another {
    font-size: 90%;
}

input.text,
input.file,
select {
    border: 1px solid #333;
    color: black;
    font-weight: bold;
    margin-top: -0.1em;
    padding: 0.2em;
}

span.text-for-hidden {
    font-weight: bold;
    color: black;
}

input.error,
textarea.error,
select.error,
p.error {
    background-color: #FFCC66;
}

input.disabled,
textarea.disabled,
select.disabled {
    background-color: #CCC;
    border-color: #333;
}

input.text:focus,
textarea:focus,
select:focus {
    background-color: #FAFFCA;
    border-color: black;
}

input.narrow {
    width: 7em;
}

input.medium {
    width: 18em;
}

input.wide {
    width: 30em;
}

textarea.medium {
    height: 7em;
    width: 24em;
}

input.submit {
    background-color: #8f683f;
    border-bottom: 2px solid #6d3903;
    border-left: 1px solid #e68117;
    border-right: 2px solid #6d3903;
    border-top: 1px solid #e68117;
    color: white;
    font-weight: bold;
    margin-left: 12.5em;
    margin-top: 0.5em;
    padding: 0.1em;
}

form.inline {
    display: inline;
}

form.inline input.submit {
    margin-top: 0.1em;
}

form.flush-left input.submit,
form.flush-left div.form-item div.help-text { 
    margin-left: 0;
}

form.flush-left .for-field {
    width: auto;
}

form select optgroup {
    font-size: 110%;
    font-weight: bold;
}

form select optgroup option {
    font-weight: normal;
    font-size: 91%;
}

/* Page edit form */

#form-and-preview {
    width: 98%;
}

#toolbar ul {
    margin: 0;
    padding: 0;
    width: 100%;
}

#toolbar ul li {
    display: inline;
    list-style: none;
}

#toolbar ul li img {
    background-color: #f9f9f9;
    border-bottom: 2px solid #333;
    border-left: 1px solid #999;
    border-right: 2px solid #333;
    border-top: 1px solid #999;
    padding: 3px;
}

textarea#page-content {
    font-weight: normal;
    height: 20em;
    margin: 0;
    padding: 0.5em;
    width: 100%;
}

#preview-content {
    background-color: #f9f9f9;
    border: 1px solid black;
    margin-top: 1em;
    padding: 0.5em;
    width: 100%;
}

/* Attachments */

#file-upload-form {
    /* This makes its left border line up with the table below it */
    margin-left: -2px;
}

#upload-lightbox {
    text-align: center;
}

#file-view-iframe {
    border: 1px solid #bbb;
}

